--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.Tp6"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ItemRecyclerActivity"
+            android:parentActivityName=".activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.MainActivity"/>
+        </activity>
+
+
+        <activity
             android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
