--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Tp6"
         tools:targetApi="31">
         <activity
-            android:name=".activity.ItemRecyclerActivity"
+            android:name=".activity.MovieListActivity"
             android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
