--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
 
+    // Koin
+    implementation 'io.insert-koin:koin-android:3.1.2'
+
     testImplementation "junit:junit:4.13.2"
     testImplementation "io.mockk:mockk:1.13.4"
     testImplementation "androidx.arch.core:core-testing:2.2.0"
